Updated default agent image + fixed flex wrap on workflow page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,9 +117,9 @@ svg.iconify.iconify--icon-park-twotone {
 }
 
 .workflow-card-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around !important;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 20px;
   margin-top: 66px;
 }
 
